--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,7 +20,7 @@
     <link rel="shortcut icon" href="{{ site.icon | prepend: '/assets/img/' | relative_url}}"/>
     {% endif %}
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
-    <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
+    <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}"
     
     <!-- Dark Mode -->
     {% if site.enable_darkmode %}
@@ -29,3 +29,6 @@
     <script src="{{ '/assets/js/theme.js' | relative_url }}"></script>
     <script src="{{ '/assets/js/dark_mode.js' | relative_url }}"></script>
     {% endif %}
+
+    <!-- Analytics -->
+    {% include scripts/analytics.html %}
